--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,16 @@ site_name: LuniumLuk's Blog
 theme:
   name: material
   palette:
-    scheme: slate
-    primary: amber
-    accent: orange
+    - media: "(prefers-color-scheme: light)" 
+      scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)" 
+      scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
 markdown_extensions:
   - pymdownx.superfences
   - pymdownx.arithmatex:
